--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/montserrat": "^4.5.13",
     "@fontsource/wellfleet": "^4.5.8",
     "framer-motion": "^6",
+    "nuka-carousel": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1"
